Nutch Change Log

Release 2.1 - Current Development
* NUTCH-1444 Indexing should not create temporary files (do not extend from FileOutputFormat) (ferdy)

* NUTCH-1443 Solr schema version is invalid (markus)

* NUTCH-1441 AnchorIndexingFilter should use plain HashSet (ferdy)

* NUTCH-1417 Remove o.a.n.metadata.Office (lewismc)

* NUTCH-1376 add ant description parameters (lewismc)

* NUTCH-1440 reconfigure non-existent stopwords_en.txt in schema-solr4.xml (shekhar sharma via lewismc)

* NUTCH-1439 Define boost field as type float in schema-solr4.xml (shekhar sharma via lewismc)

* NUTCH-1438 ParserJob support for option -reparse (ferdy)

* NUTCH-1437 HostInjectorJob to accept lines with or without protocol (ferdy)

* NUTCH-1435 Host jobs throw NullPointerException with MySQL (ferdy via lewismc)

* NUTCH-1428 GeneratorMapper should not initialize filters/normalizers when they are disabled (ferdy)

* NUTCH-1427 Reuse SelectorEntry in Generator. (ferdy)

* NUTCH-1411 nutchgora fetcher.store.content does not work (Alexander Kingson via ferdy) 

* NUTCH-1426 HostDb close() should close store instead of flush (ferdy)

* NUTCH-1425 DbUpdaterJob declares PREV_SIGNATURE on input twice (ferdy)

* NUTCH-1424 fix fetcher timelimit logging (ferdy)

* NUTCH-1423 Remove unused fields in LanguageIndexingFilter (ferdy)

* NUTCH-1306 Add option to not commit and clarify existing solr.commit.size (ferdy)

Release 2.0 (08/06/2012) ddmmyyy
Full Jira report - https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=10680&version=12314893

* NUTCH-1391 readdb -stats fires java.io.EOFException (jnioche)

* NUTCH-1400 Remove developer -core option for bin/nutch (jnioche)

* NUTCH-1399 TestProtocolHttpClient fails (jnioche)

* NUTCH-1404 Nutch script fails to find job file in deploy mode (sidabatra, jnioche)

* NUTCH-1401 Upgrade to Hadoop 1.0.3  (jnioche)

* NUTCH-1396 Upgrade Tika 1.1 (jnioche)
