@@ -32,6 +32,9 @@
   </publications>
 
   <dependencies>
+    <dependency org="org.elasticsearch" name="elasticsearch" rev="0.19.4" 
+                conf="*->default,sources"/>
+  
     <dependency org="org.apache.solr" name="solr-solrj" rev="3.4.0"
       conf="*->default" />
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.1"
