@@ -29,6 +29,9 @@
           http://ibiblio.lsu.edu/main/pub/packages/maven2
           http://www.ibiblio.net/pub/packages/maven2
   -->
+  <property name="oss.sonatype.org" 
+    value="http://oss.sonatype.org/content/repositories/releases/" 
+    override="false"/>
   <property name="repo.maven.org"
     value="http://repo1.maven.org/maven2/"
     override="false"/>
@@ -58,19 +61,28 @@
       pattern="${maven2.pattern.ext}"
       m2compatible="true"
       />
+     <ibiblio name="sonatype"
+      root="${oss.sonatype.org}"
+      pattern="${maven2.pattern.ext}"
+      m2compatible="true"
+      />
+     
     <chain name="default" dual="true">
       <resolver ref="local"/>
       <resolver ref="maven2"/>
+      <resolver ref="sonatype"/>
     </chain>
     <chain name="internal">
       <resolver ref="local"/>
     </chain>
     <chain name="external">
       <resolver ref="maven2"/>
+      <resolver ref="sonatype"/>
     </chain>
     <chain name="external-and-snapshots">
       <resolver ref="maven2"/>
       <resolver ref="apache-snapshot"/>
+      <resolver ref="sonatype"/>
     </chain>
     <chain name="restletchain">
       <resolver ref="restlet"/>
